* Pagination is now correct for filtered ticket lists (fixes ticket:50) * Pagination no longer uses separating commas instead it uses additional   whitespace which causes it to be uniform. styled a bit after google

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -526,6 +526,10 @@ div.error_box {
 	font-size: 1.3em;
 }
 
+#main_inner .other_page {
+    padding: 0px 3px 0px 3px;
+}
+
 .centered {
 	text-align: center;
 }
